<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/connectionContainer"
        layout="@layout/include_no_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />


    <ScrollView
        android:id="@+id/address_layout_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/saveButtonLL"
        android:layout_centerHorizontal="true"
        android:clipToPadding="false"
        android:scrollbars="none">
        <!--Relative layout is required to prevent the view from clipping at the top edge-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/margin_normal"
                android:background="@drawable/shadow_border_layout"
                android:minWidth="@dimen/width_normal"
                android:orientation="vertical"
                android:padding="@dimen/padding_large">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:singleLine="true"
                        android:text="" />
                    <!--android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "/>-->

                </android.support.design.widget.TextInputLayout>

                <!--<android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/landmarkEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/landmark"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>-->

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/countryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"


                        android:hint="@string/country" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/stateName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/state"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/cityEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/city"
                        android:minWidth="@dimen/width_normal"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/pinCodeTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/pinEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pincode"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/addressEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/street_address"
                        android:inputType="textMultiLine"
                        android:minWidth="@dimen/width_normal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/mobileEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="number"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/shipToSameAddressCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:minWidth="@dimen/width_normal"
                    android:text="@string/ship_to_same_address" />
                <com.andexert.library.RippleView xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:ripple="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/save_ripple_view"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_normal"
                    app:rv_alpha="@integer/ripple_aplha_filter_buttons"
                    app:rv_color="@color/material_green_A100"
                    app:rv_framerate="@integer/ripple_framerate_fast"
                    app:rv_rippleDuration="@integer/ripple_duration"
                    ripple:rv_type="rectangle">


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/my_button"
                        android:paddingLeft="@dimen/padding_large"
                        android:paddingRight="@dimen/padding_large"
                        android:text="@string/save"
                        android:textAllCaps="true" />
                </com.andexert.library.RippleView>

            </LinearLayout>

        </RelativeLayout>


    </ScrollView>


</RelativeLayout>