<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/orderLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_no_label"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_no"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/order_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="null" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email_label"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_with_colon"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="null" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/message"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressWheel"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/margin_large"
        android:text="@string/paypal_start_verification_msg" />

    <!--<Button
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/retry" />-->

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progressWheel"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        wheel:matProg_barColor="@android:color/white"
        wheel:matProg_progressIndeterminate="true" />


</RelativeLayout>
