<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_normal"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/backBtnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_small"
        android:minWidth="@dimen/width_normal">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/left_arrow" />

        <TextView
            android:id="@+id/payment_options_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/payment_options_layout"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/backBtn"
            android:text="@string/change_paymentOptions" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/order_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_border_layout"
        android:minWidth="@dimen/width_normal"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="1 Item"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/bank_deposit_text" />

        <com.andexert.library.RippleView xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:ripple="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            app:rv_alpha="@integer/ripple_aplha_filter_buttons"
            app:rv_color="@color/material_green_A100"
            app:rv_framerate="@integer/ripple_framerate"
            app:rv_rippleDuration="@integer/ripple_duration"
            ripple:rv_type="rectangle">

            <Button
                android:id="@+id/bankDepositPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/my_button"
                android:enabled="false"
                android:text="@string/orderNow"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </com.andexert.library.RippleView>

    </LinearLayout>
</LinearLayout>