<?xml version="1.0" encoding="utf-8"?><!--<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">-->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:background="?attr/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_scrollFlags="scroll|enterAlways" />


    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <View
            android:id="@+id/shadowView"
            android:layout_width="wrap_content"
            android:layout_height="6dp"
            android:layout_above="@+id/optionButtons"
            android:background="@drawable/above_shadow" />

        <LinearLayout
            android:id="@+id/optionButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:clipToPadding="false">

            <com.andexert.library.RippleView xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:ripple="http://schemas.android.com/apk/res-auto"
                android:id="@+id/addToCartRippleView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:rv_alpha="@integer/ripple_aplha_filter_buttons"
                app:rv_color="@color/material_grey_500"
                app:rv_framerate="@integer/ripple_framerate"
                app:rv_rippleDuration="@integer/ripple_duration"
                ripple:rv_type="rectangle">

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black_color"
                    android:text="@string/add_to_cart"
                    android:textColor="@color/green_color" />

            </com.andexert.library.RippleView>

            <com.andexert.library.RippleView xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:ripple="http://schemas.android.com/apk/res-auto"
                android:id="@+id/buyNowRippleView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:rv_alpha="@integer/ripple_aplha_filter_buttons"
                app:rv_color="@color/material_green_A100"
                app:rv_framerate="@integer/ripple_framerate"
                app:rv_rippleDuration="@integer/ripple_duration"
                ripple:rv_type="rectangle">

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@color/green_color"
                    android:text="@string/buy_now"
                    android:textColor="@color/white" />
            </com.andexert.library.RippleView>

            <Button
                android:id="@+id/outOfStockButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/out_of_stock"
                android:textColor="@color/white"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>


    <!--</android.support.v4.widget.DrawerLayout>-->